# ComfyUI_ProjectManager

./: .gitignore  __init__.py  pyproject.toml  requirements.txt
js/: projectmanager.js
nodes/: __init__.py  path_node.py  save_nodes.py  save_utils.py  server.py
